--- a/WebPage/GGCHacks/src/app/landingpage/landingpage.component.css
+++ b/WebPage/GGCHacks/src/app/landingpage/landingpage.component.css
@@ -107,5 +107,5 @@ body{
 .card{
   border: none !important;
   outline: none !important;
-  margin-bottom: -15% !important;
+  margin-bottom: -20% !important;
 }
